added version alert

--- a/kafx/src/main/resources/org/openjfx/kafx/lang/kafx_de.properties
+++ b/kafx/src/main/resources/org/openjfx/kafx/lang/kafx_de.properties
@@ -40,3 +40,8 @@ alert_invalidPassword_main=Das eingegebene Passwort war leider falsch.
 
 alert_lastFileMissing_title=Datei nicht gefunden!
 alert_lastFileMissing_main=Die zuletzt geöffnete Datei konnte nicht gefunden werden.
+
+alert_version_title=Neue Version
+alert_version_local=Installiert
+alert_version_remote=Verfügbar
+alert_version_main=Es wird dringend empfohlen, dass Sie die neuste Version herunterladen und installieren. Klicken Sie unten auf OK, um auf die Webseite weitergeleitet zu werden.
